ci: setup sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=go-project
+sonar.projectKey=FehYamaoka_sonarcloud
+sonar.organization=fehyamaoka
 
 sonar.sources=.
 sonar.exclusions=**/*_test.go
